# cozum

.qoder/rules/: general.md
backend/: .env.example  .env.production.example  .flake8  .gitignore  DEPLOYMENT.md  Dockerfile  db.sqlite3  docker-compose.yml  entrypoint.sh  manage.py  nginx.conf  pyproject.toml  pytest.ini  requirements.txt  test_rate_limit.py
backend/cozum_var_backend/: asgi.py  health.py  settings.py  urls.py  wsgi.py
backend/media/: test.txt
backend/reports/: admin.py  apps.py  models.py  serializers.py  test_models.py  test_serializers.py  test_views.py  tests.py  urls.py  views.py
backend/reports/migrations/: 0001_initial.py  0002_initial.py
backend/users/: admin.py  models.py  serializers.py  test_models.py  test_serializers.py  test_views.py  tests.py  urls.py  views.py
backend/users/management/commands/: create_admin.py
backend/users/migrations/: 0001_initial.py
docs/: 1_Proje_Manifestosu.md  2_MVP_Kapsami.md  3_Teknoloji_Yigini_ve_Kurulum.md  4_Veritabani_Semasi.md  5_API_Endpoint_Listesi.md  6_Adim_Adim_Task_Listesi.md  FLUTTER_TEMPLATE_CONSTITUTION_TR.md  R2_Storage_Troubleshooting.md  sunum.md
frontend/: .env  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/: AppBar.tsx  Sidebar.tsx
frontend/src/layouts/: ProtectedLayout.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: Categories.tsx  Dashboard.tsx  (+7 more)
mobile/: analysis_options.yaml  pubspec.yaml
mobile/android/: gradle.properties
mobile/lib/: main.dart
mobile/web/: index.html
(+140 files in other folders)
