[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cozum-var-backend"
version = "1.0.0"
description = "Django backend for Cozum Var platform"
requires-python = ">=3.8"

[tool.pyright]
include = ["."]
exclude = [
    "**/node_modules",
    "**/__pycache__",
    "**/.*",
    "venv/",
    "build/",
    "dist/"
]
reportMissingImports = "none"
reportMissingTypeStubs = "none"
pythonVersion = "3.11"
typeCheckingMode = "basic"

[tool.pylint]
load-plugins = ["pylint_django"]
django-settings-module = "cozum_var_backend.settings"

[tool.isort]
profile = "django"
known_django = "django"
sections = ["FUTURE", "STDLIB", "DJANGO", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''